--- a/Photo Libary Management/Base.lproj/Main.storyboard
+++ b/Photo Libary Management/Base.lproj/Main.storyboard
@@ -1,24 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Photo_Libary_Management" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VF4-4U-Cql">
+                                <rect key="frame" x="0.0" y="802" width="414" height="60"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="lMn-J5-mZc"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="copyBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z0f-Gd-llY"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9hE-MD-JpZ">
+                                <rect key="frame" x="0.0" y="84" width="414" height="718"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ryq-Dx-vDM">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="ncn-Mw-eXc" customClass="MyCollectionViewCell" customModule="Photo_Libary_Management" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="OoR-Jj-39l">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bwd-xq-pfx">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="128" height="128"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="Bwd-xq-pfx" id="ggb-AM-bt3"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfU-ls-G2Q">
+                                <rect key="frame" x="244" y="44" width="170" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="45R-WX-HiW"/>
+                                    <constraint firstAttribute="width" constant="170" id="EDG-Os-7QY"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Select"/>
+                                <connections>
+                                    <action selector="selectMultiple:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tvt-2u-1ng"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhU-Vp-Ixo">
+                                <rect key="frame" x="0.0" y="44" width="140" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="Qh5-EX-kJQ"/>
+                                    <constraint firstAttribute="height" constant="31" id="Sh9-zA-P6W"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Album"/>
+                                <connections>
+                                    <action selector="goToAlbum:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EyQ-FW-Kga"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VF4-4U-Cql" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1p1-rq-vhu"/>
+                            <constraint firstItem="cfU-ls-G2Q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3Jn-hP-Zo5"/>
+                            <constraint firstItem="VF4-4U-Cql" firstAttribute="top" secondItem="9hE-MD-JpZ" secondAttribute="bottom" id="ERG-mb-TR0"/>
+                            <constraint firstItem="fhU-Vp-Ixo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FJ7-ok-skr"/>
+                            <constraint firstItem="9hE-MD-JpZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="RqX-dx-5n8"/>
+                            <constraint firstItem="VF4-4U-Cql" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VZP-QX-0Cb"/>
+                            <constraint firstItem="9hE-MD-JpZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="aLN-LK-Uzd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cfU-ls-G2Q" secondAttribute="trailing" id="fjL-Ud-iwS"/>
+                            <constraint firstItem="fhU-Vp-Ixo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="m2y-GZ-qyD"/>
+                            <constraint firstItem="VF4-4U-Cql" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="pYQ-cT-Zvu"/>
+                            <constraint firstItem="9hE-MD-JpZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="y1B-hZ-RkF"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="9hE-MD-JpZ" id="Yg3-cU-p85"/>
+                        <outlet property="selectButton" destination="cfU-ls-G2Q" id="Z2b-3r-FhV"/>
+                        <segue destination="dtQ-6e-hrk" kind="show" identifier="myAlbum" id="uft-Qh-OVb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="128.57142857142856"/>
+        </scene>
+        <!--Album View Controller-->
+        <scene sceneID="52e-d8-Hib">
+            <objects>
+                <viewController id="dtQ-6e-hrk" customClass="AlbumViewController" customModule="Photo_Libary_Management" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2bu-ja-ste">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="VcR-sU-hAW">
+                                <rect key="frame" x="0.0" y="44" width="414" height="798"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8MM-Kz-p3M"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8MM-Kz-p3M" firstAttribute="trailing" secondItem="VcR-sU-hAW" secondAttribute="trailing" id="6xh-RQ-X0o"/>
+                            <constraint firstItem="VcR-sU-hAW" firstAttribute="top" secondItem="8MM-Kz-p3M" secondAttribute="top" id="7lx-8e-ODr"/>
+                            <constraint firstItem="VcR-sU-hAW" firstAttribute="leading" secondItem="8MM-Kz-p3M" secondAttribute="leading" id="k99-Qo-iSc"/>
+                            <constraint firstItem="8MM-Kz-p3M" firstAttribute="bottom" secondItem="VcR-sU-hAW" secondAttribute="bottom" id="ogN-oA-eYv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="qOF-qr-H07"/>
+                    <connections>
+                        <outlet property="tableView" destination="VcR-sU-hAW" id="Np7-ZW-4Nl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HKt-aJ-aev" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="958" y="129"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
