--- a/Photo Libary Management/Base.lproj/Main.storyboard
+++ b/Photo Libary Management/Base.lproj/Main.storyboard
@@ -23,8 +23,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="lMn-J5-mZc"/>
                                 </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Copy to my album"/>
                                 <connections>
                                     <action selector="copyBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z0f-Gd-llY"/>
                                 </connections>
